--- a/style.css
+++ b/style.css
@@ -5,18 +5,36 @@
 }
 #transactions {
     background-color: burlywood;
+    
 
 }    
 
 #fetchButton {
+    width: 30%;
+    font-size: 1rem;
     background-color: burlywood;
     padding: 2 2 2 2;
+    border-radius: 0.1rem;
+    transition-duration: 0.4s;
 
 }
+
+#fetchButton:hover {
+  background-color: white;
+  border-color: burlywood;
+  color: #87ADDE;
+  box-shadow: 0 12px 16px 0 rgba(135, 173, 222, 0.24), 0 17px 50px 0 rgba(135, 173, 222,0.19);
+  
+}
 body {
-    margin: 10px;
+    margin: 0.5rem;
+    font-family: 'Poppins', sans-serif;
+    font-size: 0.8rem; /* 18px */
+    font-weight: 400;
+    line-height: 1.4;
 }
 #title {
+    color: #87ADDE;
     text-align: center;
     font-size: 1.2rem;
 }
