--- a/style.css
+++ b/style.css
@@ -38,10 +38,10 @@ body {
     text-align: center;
     font-size: 1.2rem;
 }
-li {
+/*li {
     list-style: none;
 }
 
 .card {
     margin: 2rem;
-}
+}*/
