--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
     font-size: 0.8rem; /* 18px */
     font-weight: 400;
     line-height: 1.4;
+    background-color: #eaeaea;
 }
 #title {
     color: #87ADDE;
