--- a/style.css
+++ b/style.css
@@ -9,14 +9,11 @@
 
 }    
 
-.col {
-  position: relative;
-}
   
 #fetchButton {
     width: 30%;
     font-size: 1rem;
-    position: relative;
+    position: static;
     left: 35%;
     background-color: burlywood;
     padding: 2 2 2 2;
@@ -41,7 +38,7 @@ body {
     background-color: #eaeaea;
 }
 #title {
-    position: relative;
+    position: static;
     color: #87ADDE;
     text-align: center;
     font-size: 1.2rem;
