--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 #fetchButton {
     width: 30%;
     font-size: 1rem;
-    position: static;
+    position: relative;
     left: 35%;
     background-color: burlywood;
     padding: 2 2 2 2;
