--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     font-size: 1rem;
     position: relative;
     left: 35%;
+    margin-bottom: 2rem;
     background-color: burlywood;
     padding: 2 2 2 2;
     border-radius: 0.1rem;
