--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
 
 }    
 
+li {
+    list-style: none;
+}
+
 #fetchButton {
     width: 30%;
     font-size: 1rem;
@@ -48,6 +52,38 @@ body {
     margin: 2rem;
 }*/
 
+.margin-bottom-md {
+    margin-bottom: 5rem;
+}
+
 .margin-bottom-sm {
     margin-bottom: 2rem;
+}
+
+.margin-top-sm {
+    margin-bottom: 2rem;
+}
+
+
+.overflow-scroll {
+    overflow: scroll;
+}
+
+#rowBtn {
+    position: relative;
+    top: 2rem;
+}
+
+li::-webkit-scrollbar {
+    width: 12px;
+}
+
+li::-webkit-scrollbar-track {
+    background: rgb(156, 156, 154);        /* color of the tracking area */
+  }
+  
+li::-webkit-scrollbar-thumb {
+    background-color: rgb(0, 0, 0);    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 3px solid rgb(156, 156, 154);  /* creates padding around scroll thumb */
 }
